client/src/css/searchJob.css
.all {
  background: linear-gradient(120deg, #2980b9, #8e44ad);
  width: 100%;
  height: 100vh;
  background-repeat: no-repeat;
  background-attachment: fixed;
  overflow-x: hidden;
  overflow-y: auto;
}

.searchForm {
  padding: 50px;
  height: 400px;
}

form .search_field {
  width: 15%;
  position: relative;
  border-bottom: 2px solid #adadad;
  margin: 30px 0;
}

.search_field input {
  padding: 0 5px;
  height: 40px;
  font-size: 16px;
  border: none;
  background: none;
  outline: none;
}

.search_field label {
  position: absolute;
  top: 50%;
  left: 5px;
  color: #adadad;
  transform: translateY(-50%);
  font-size: 16px;
  pointer-events: none;
  transition: .5s;
}

.search_field span::before {
  content: '';
  position: absolute;
  top: 40px;
  left: 0;
  width: 0%;
  height: 2px;
  background: #2691d9;
  transition: .5s;
}

.search_field input:focus~label,
.search_field input:valid~label {
  top: -5px;
  color: #2691d9;
}

.search_field input:focus~span::before,
.search_field input:valid~span::before {
  width: 100%;
}

#searchBtn {
  text-align: center;
  margin: 30px 0;
  width: 15%;
  height: 50px;
  border: 1px solid;
  background: #2691d9;
  border-radius: 25px;
  font-size: 18px;
  color: #e9f4fb;
  font-weight: 700;
  cursor: pointer;
  outline: none;
}

#searchBtn:hover {
  border-color: #2691d9;
  transition: .5s;
}

.savedJobsTitle {
  padding: 50px;
  height: 150;
}

.noSavedJobs {
  position: absolute;
  top: 50%;
  left: 30%;
  text-align: center;
}

.btn {
  text-align: center;
  margin-top: 5px;
  margin-right: 15px;
  width: 8%;
  height: 40px;
  border: 1px solid;
  background: #2691d9;
  border-radius: 25px;
  font-size: 18px;
  color: #e9f4fb;
  font-weight: 700;
  cursor: pointer;
  outline: none;
}

.btn:hover {
  border-color: #2691d9;
  transition: .5s;
}

.loader {
  position: absolute;
  width: "100%";
  height: "100";
  display: "flex";
  top: 50%;
  left: 50%;
}
/*-------------*/
.container {
  display: flex;
  height: 100vh;
  overflow: hidden;
}

.jobCardsContainer {
  /* flex: 1; */
  overflow-y: auto;
  width: 35%;
  
}

.jobInfoContainer {
  /* flex: 1; */
  overflow-y: hidden;
  height: 800px;
  width: 65%;
}

.card {
  margin: 10px;
  padding: 20px;
  background-color: #F6F6F6;
  border-radius: 10px;
  border: 3px solid #BADA55;
}

.jobInfoBody {
  margin: 10px;
  padding: 20px;
  background-color: #F6F6F6;
  border-radius: 10px;
  border: 3px solid #BADA55;
}


/* Use flexbox for horizontal layout */
/* .box {
  display: flex;
  flex-wrap: wrap; 
}


.card {
  display: flex;
  flex-wrap: wrap;
  width: 40%;
}

.jobInfoFrom {
  display: flex;
  flex-wrap: wrap;
  width: 60%;
}

.card-body {
  position: relative;
  height: 200px; 
  margin: 10px;
  padding: 20px; 
  background-color: #F6F6F6;
  border-radius: 10px;
  border: 3px solid #BADA55;
  flex: 1;
}


.jobInfo_body {
  position: relative;
  height: 800px;
  margin: 10px;
  padding: 20px; 
  background-color: #F6F6F6;
  border-radius: 10px;
  border: 3px solid #BADA55;
  flex: 1;
} */

